--- a/WPF_Snake/MainWindow.xaml
+++ b/WPF_Snake/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:WPF_Snake"
         xmlns:converter="clr-namespace:WPF_Snake.Converters"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
+        xmlns:controls="clr-namespace:WPF_Snake.UserControls"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         MinHeight="800" MinWidth="800"
@@ -18,6 +19,7 @@
                 <GradientStop Color="Black" Offset="1" />
             </RadialGradientBrush>
         </Border.Background>
+
         <Grid HorizontalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -25,43 +27,47 @@
             </Grid.RowDefinitions>
 
             <TextBlock Text="{Binding Score, StringFormat='Score {0}'}" 
-                       FontSize="20"
-                       FontWeight="Bold"
-                       HorizontalAlignment="Right"/>
+                        FontSize="20"
+                        FontWeight="Bold"
+                        HorizontalAlignment="Right"/>
             <Viewbox Grid.Row="1">
                 <Canvas Width="{Binding GameGridSize}" Height="{Binding GameGridSize}"  Background="Black">
                     <Ellipse DataContext="{Binding Fruit}"
-                             Canvas.Top="{Binding YPos}"
-                             Canvas.Left="{Binding XPos}"
-                             Width="{Binding Width}" Height="{Binding Height}" Fill="Green" />
+                                Canvas.Top="{Binding YPos}"
+                                Canvas.Left="{Binding XPos}"
+                                Width="{Binding Width}" Height="{Binding Height}" Fill="Green" />
                 </Canvas>
-        </Viewbox>
-        <Viewbox Grid.Row="1">
-            <Border>
-                <ItemsControl ItemsSource="{Binding Snake}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <Canvas Width="{Binding GameGridSize}" Height="{Binding GameGridSize}"  Background="Transparent"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemContainerStyle>
-                        <Style TargetType="ContentPresenter">
-                            <Setter Property="Canvas.Left" Value="{Binding XPos}" />
-                            <Setter Property="Canvas.Top" Value="{Binding YPos}" />
-                        </Style>
-                    </ItemsControl.ItemContainerStyle>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border>
-                                <Ellipse Width="{Binding Width}" Height="{Binding Height}" Fill="{Binding Rgb, Converter={converter:RgbArrayToSolidColorBrushConverter}}"/>
-                            </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-            </Border>
-        </Viewbox>
-    </Grid>
-        
+            </Viewbox>
+            <Viewbox Grid.Row="1">
+                <Border>
+                    <ItemsControl ItemsSource="{Binding Snake}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <Canvas Width="{Binding GameGridSize}" Height="{Binding GameGridSize}"  Background="Transparent"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemContainerStyle>
+                            <Style TargetType="ContentPresenter">
+                                <Setter Property="Canvas.Left" Value="{Binding XPos}" />
+                                <Setter Property="Canvas.Top" Value="{Binding YPos}" />
+                            </Style>
+                        </ItemsControl.ItemContainerStyle>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border>
+                                    <Ellipse Width="{Binding Width}" Height="{Binding Height}" Fill="{Binding Rgb, Converter={converter:RgbArrayToSolidColorBrushConverter}}"/>
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </Border>
+            </Viewbox>
+
+            <controls:MainMenuControl Grid.Row="0" 
+                                      Grid.RowSpan="2"
+                                      DataContext="{Binding}"
+                                      Visibility="{Binding MainMenuVisible, Converter={converter:BoolToVisibilityConverter}}"/>
+        </Grid>
     </Border>
 
 </Window>
