--- a/WPF_Snake/UserControls/HighScoresControl.xaml
+++ b/WPF_Snake/UserControls/HighScoresControl.xaml
@@ -4,7 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPF_Snake.UserControls"
+             xmlns:attachedProp="clr-namespace:WPF_Snake.AttachedProperties"
              mc:Ignorable="d" 
+             
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style x:Key="BasicButton" TargetType="{x:Type Button}">
@@ -79,16 +81,16 @@
                       ItemsSource="{Binding HighScores}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="50">
+                    <Grid Margin="25 10">
                         <TextBox Text="{Binding Name}" 
                                  IsReadOnly="{Binding IsOldScore}"
-                                 Background="white"
+                                 Background="Black"
                                  CharacterCasing="Upper"
                                  BorderThickness="0"
                                  MaxLength="3"
                                  Foreground="Green"
-                                 FontSize="20"
-                                 HorizontalAlignment="Left"/>
+                                 attachedProp:FocusAttachedProperty.Focus="{Binding Focus}"
+                                 FontSize="20"/>
                         <TextBlock Text="{Binding Score}"
                                    Foreground="Green"
                                    FontSize="20"
